--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .container {
     width: 400px;
-    height: 400px;
+    height: 500px;
     padding: 30px;
     background: transparent;
     border: 2px solid #e6b7eca1;
@@ -105,4 +105,102 @@ h1 {
     display: flex;
     align-items: center;
     font-family: 'Roboto', sans-serif;
+    color: #eee;
+}
+
+.todo span {
+    padding-left: 20px;
+    position: relative;
+    cursor: pointer;
+
+}
+
+span::before {
+    content: "";
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    margin-left: -30px;
+    border-radius: 100px;
+    border: 2px solid #e6b7eca1;
+}
+
+input[type='checkbox'] {
+    visibility: hidden;     
+}
+
+input:checked + span {
+    text-decoration: line-through
+}
+
+.todo:hover input:checked + span::before, input:checked + span::before {
+    background: url(./img/Eo_circle_green_checkmark.svg) 50% 50% no-repeat #09bb21;
+    border-color: #09bb21;
+}
+
+.todo:hover span::before {
+    border-color: #eee;
+}
+
+.todo .delete-btn  {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: #eee;
+    font-size: 24px;
+}
+
+.todos-container  {
+    height: 300px;
+    overflow: overlay;
+}
+
+.todos-container::-webkit-scrollbar-track  {
+    background: rgb(247, 247, 247);
+    border-radius: 20px
+}
+
+.todos-container::-webkit-scrollbar  {
+    width: 0;
+}
+
+.todos-container:hover::-webkit-scrollbar  {
+    width: 7px;
+}
+
+.todos-container::-webkit-scrollbar-thumb  {
+    background: #d5d5d5;
+    border-radius: 20px;
+}
+
+.filters {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+}
+
+.filter {
+    color: #eee;
+    padding: 5px 15px;
+    border-radius: 100px;
+    border: 2px solid #e6b7eca1;
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.filter.active, .filter:hover {
+    background-color: #e6b7eca1;
+}
+
+.delete-all {
+    display: flex;
+    color: #eee;
+    padding: 7px 15px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.delete-all:hover {
+    border-radius: 5px;
+    background-color: #e6b7eca1;
 }
